2007-05-07  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_highlight_and_shade), (clearlooks_draw_frame),
	(clearlooks_draw_separator), (clearlooks_draw_toolbar),
	(clearlooks_draw_menubaritem):
	Toolbar now uses bg[NORMAL]
	Adjust some shades

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_draw_button_gloss),
	(clearlooks_glossy_draw_light_inset),
	(clearlooks_glossy_draw_button),
	(clearlooks_glossy_draw_menubaritem):
	Adjust inset for inactive buttons
	More hilight on inactive buttons (less usable?)
	Menubar item now has rounded support

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_layout), (clearlooks_style_class_init):
	Now the shadow on inactive text is a shade of the bg,
	Fix rendering with dark themes
	
	* engines/clearlooks/src/support.c: (clearlooks_get_parent_bg):
	Few tweaks to get the correct parentbg

2007-05-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	* engines/clearlooks/src/clearlooks_style.c:
	* engines/clearlooks/src/clearlooks_types.h:
	Use const CairoColor pointer everywhere as the color should never
	be modified.
	Also removed some unused variables.

2007-05-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box_gap), (clearlooks_style_draw_extension),
	(clearlooks_style_draw_option), (clearlooks_style_draw_check),
	(clearlooks_style_draw_vline), (clearlooks_style_draw_hline),
	(clearlooks_style_draw_shadow_gap),
	(clearlooks_style_draw_resize_grip), (clearlooks_style_draw_tab),
	(clearlooks_style_draw_arrow):
	Added missing sanity checks.

2007-05-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	Fixed inset shadow on pressed buttons
